--- a/NOVA/Views/Finans/Kur.cshtml
+++ b/NOVA/Views/Finans/Kur.cshtml
@@ -240,9 +240,19 @@
 
     <script>
 
-            $(document).ready(function () {
+        $(document).ready(function () {
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
                 document.getElementById("finans").className = "menu-item open active";
                 document.getElementById("kur").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
+
+                document.getElementById("finans1").className = "nav__link active";
+                document.getElementById("kur1").className = "nav__dropdown-item active";
+            }
+                
             }).ajaxComplete(function () {
                 
                 $('#table tbody tr').addClass("tr0");
