--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -12,7 +12,7 @@
     <title>PersonelBilgi</title>
 </head>
 <body onclose="close()">
-    <div class="container-xxl flex-grow-1 container-p-y">
+    <div class="container-fluid flex-grow-1 container-p-y">
         <div class="row">
             <div class="col-md-12">
                 <div class="card mb-4">
@@ -5320,8 +5320,17 @@
 
     </script>
     <script>
-        document.getElementById("ik").className = "menu-item open active";
-        document.getElementById("personelbilgi").className = "menu-item active";
+        if ($(window).width() < 600) {
+            $("#divPartial2").show();
+            document.getElementById("ik").className = "menu-item open active";
+            document.getElementById("personelbilgi").className = "menu-item active";
+        }
+        else {
+            $("#divPartial").show();
+            document.getElementById("ik1").className = "nav__link active";
+            document.getElementById("personelbilgi1").className = "nav__dropdown-item active";
+        }
+        
         function readURL(input) {
             document.getElementById("resimKaydet").removeAttribute("disabled")
             if (input.files && input.files[0]) {
