--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -6072,8 +6072,18 @@
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
     <script type="text/javascript">
-        document.getElementById("ik").className = "menu-item open active";
-        document.getElementById("personelbilgiyon").className = "menu-item active";
+        if ($(window).width() < 600) {
+            $("#divPartial2").show();
+            document.getElementById("ik").className = "menu-item open active";
+            document.getElementById("personelbilgiyon").className = "menu-item active";
+        }
+        else {
+            $("#divPartial").show();
+
+            document.getElementById("ik1").className = "nav__link active";
+            document.getElementById("personelbilgiyon1").className = "nav__dropdown-item active";
+        }
+        
         function myKaydetFunction() {
             Swal.fire({
                 title: 'Formu kaydetmek istediğinize emin misiniz?',
