--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -5855,8 +5855,18 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript">
-        document.getElementById("ik").className = "menu-item open active";
-        document.getElementById("subebazi").className = "menu-item active";
+        if ($(window).width() < 600) {
+            $("#divPartial2").show();
+            document.getElementById("ik").className = "menu-item open active";
+            document.getElementById("subebazi").className = "menu-item active";
+        }
+        else {
+            $("#divPartial").show();
+
+            document.getElementById("ik1").className = "nav__link active";
+            document.getElementById("subebazi1").className = "nav__dropdown-item active";
+        }
+    
         function myKaydetFunction() {
             Swal.fire({
                 title: 'Formu kaydetmek istediğinize emin misiniz?',
