--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -294,8 +294,18 @@
     </div>
 </div>
 <script>
-    document.getElementById("satis").className = "menu-item open active";
-    document.getElementById("detaylisip").className = "menu-item active";
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("satis").className = "menu-item open active";
+        document.getElementById("detaylisip").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
+
+        document.getElementById("satis1").className = "nav__link active";
+        document.getElementById("detaylisip1").className = "nav__dropdown-item active";
+    }
+   
     
     var tumliste2 = null;
     var tumliste = null;
