--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -325,8 +325,18 @@
                     onSearch: function (text) { $("#table").on("ReorderRow", function () { }) }
                 }
             })
-            document.getElementById("satis").className = "menu-item open active";
-            document.getElementById("fiyatyonetimi").className = "menu-item active";
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
+                document.getElementById("satis").className = "menu-item open active";
+                document.getElementById("fiyatyonetimi").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
+
+                document.getElementById("satis1").className = "nav__link active";
+                document.getElementById("fiyatyonetimi1").className = "nav__dropdown-item active";
+            }
+           
             getRoleAsync().then(function (data) {
                 roles = data;
             })
