--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -76,6 +76,9 @@
 
 
     @@media screen and (max-width: 600px) {
+        .select2 {
+            width: 70vw !important;
+        }
         .menu1 {
             display: inline-flex;
         }
@@ -287,8 +290,18 @@
     </div>
 </div>
 <script>
-    document.getElementById("satis").className = "menu-item open active";
-    document.getElementById("stok").className = "menu-item active";
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("satis").className = "menu-item open active";
+        document.getElementById("stok").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
+
+        document.getElementById("satis1").className = "nav__link active";
+        document.getElementById("stok1").className = "nav__dropdown-item active";
+    }
+    
     var type = 'fa'
 
     function loadingTemplate(message) {
