--- a/NOVA/Views/Satis/Teklif.cshtml
+++ b/NOVA/Views/Satis/Teklif.cshtml
@@ -45,6 +45,11 @@
                 img:hover{
                     opacity:.4;
                 }
+        .btn-secondary:after {
+            top: 0;
+            border-color: transparent transparent transparent #ddd;
+            border-width: 115px;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -55,7 +60,7 @@
    
     
     <form>
-        <div class="container-fluid text-center" style="margin-top:15vh;">
+        <div class="container-fluid text-center" style="margin-top:15vh;margin-left:22vw">
             <div class="row">
                 <div class="col-sm-6 p-0" style="margin-bottom:-15px">
                     <div class="btn-group w-100" role="group" aria-label="Basic example" style="z-index:5">
@@ -271,6 +276,7 @@
 
                
         </div>
+            </div>
     </form>
 
 
