--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -378,9 +378,18 @@
         allOptions.appendTo("#cari");
     }
 
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("sevkiyat").className = "menu-item open active";
+        document.getElementById("saticisiprap").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
 
-    document.getElementById("sevkiyat").className = "menu-item open active";
-    document.getElementById("saticisiprap").className = "menu-item active";
+        document.getElementById("sevkiyat1").className = "nav__link active";
+        document.getElementById("saticisiprap1").className = "nav__dropdown-item active";
+    }
+   
     var type = 'fa'
 
     function loadingTemplate(message) {
