--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -293,8 +293,18 @@
     </div>
 </div>
 <script>
-    document.getElementById("sevkiyat").className = "menu-item open active";
-    document.getElementById("mussiparisrap").className = "menu-item active";
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("sevkiyat").className = "menu-item open active";
+        document.getElementById("mussiparisrap").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
+
+        document.getElementById("sevkiyat1").className = "nav__link active";
+        document.getElementById("mussiparisrap1").className = "nav__dropdown-item active";
+    }
+   
 
     var tumliste2 = null;
     var tumliste = null;
