--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -60,10 +60,14 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            @Html.Partial("_Layout_menu")
-
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
 
 
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
@@ -103,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
