--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -561,10 +561,14 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            @Html.Partial("_Layout_menu")
-
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
                 <nav class="layout-navbar layout-navbar-ana container-xxl navbar navbar-expand-xl align-items-center" id="layout-navbar">
 
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
@@ -594,7 +598,7 @@
                                             document.getElementsByClassName("dropdown-menu")[0].className = "dropdown-menu dropdown-menu-end";
                                             sabit = 0;
                                         }
-                                        
+
                                     }
                                 </script>
                                 <a class="nav-link dropdown-toggle hide-arrow" style="cursor:pointer" onclick="sh()" data-bs-toggle="dropdown">
