--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -26,6 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet" type="text/css" />
 
+ 
 
 
     @Styles.Render("~/Content/test")
@@ -50,6 +51,10 @@
                 color: #fff;
                 text-decoration: none;
             }
+
+        .layout-navbar {
+            z-index: 0 !important;
+        }
     </style>
 </head>
 <body>
@@ -59,9 +64,14 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
-            <div class="layout-page">
-                <nav class="layout-navbar layout-navbar-ana container-xxl navbar navbar-expand-xl align-items-center"
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
+            <div class="layout-page" style="padding-left:0 !important">
+                <nav class="layout-navbar layout-navbar-ana container-fluid navbar navbar-expand-xl align-items-center"
                      id="layout-navbar">
 
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
@@ -75,7 +85,7 @@
                         <!-- beterbocekler.tr.gg Widget Başlangıcı --> <div class="tradingview-widget-container">
 
 
-                                                                           <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
     {
@@ -105,8 +115,8 @@
   "displayMode": "regular",
   "locale": "tr"
 }
-                                
-                                                                           </script>
+
+                            </script>
                         </div> <!-- beterbocekler.tr.gg Widget sonu -->
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
 
@@ -239,19 +249,19 @@
     </div>
 
     <!-- Overlay -->
-    <div class="layout-overlay layout-menu-toggle"></div>
+
+
+
+
+
+
+    @Scripts.Render("~/bundles/bootstrap")
+
   
-    
 
 
-    
-  @Scripts.Render("~/bundles/bootstrap")
 
-  
 
-   
-   
-    
 
 
     @RenderSection("scripts", required: false)
