--- a/NOVA/Views/Shared/_Layout_personel.cshtml
+++ b/NOVA/Views/Shared/_Layout_personel.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-
+    <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,72 +50,75 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
-            <div class="layout-page">
-                <nav class="layout-navbar layout-navbar-ana container-xxl navbar navbar-expand-xl align-items-center bg-navbar-theme"
-                     id="layout-navbar" style="background-color:transparent">
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
+            <div class="layout-page" style="padding-left:0 !important">
+                <nav class="layout-navbar layout-navbar-ana container-fluid navbar navbar-expand-xl align-items-center bg-navbar-theme"
+                     id="layout-navbar" style="background-color:transparent;z-index:1 !important">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
                         <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
                             <i class="bx bx-menu bx-sm"></i>
                         </a>
                     </div>
+                    <ul class="navbar-nav flex-row align-items-center ms-auto">
 
-                    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-                        <ul class="navbar-nav flex-row align-items-center ms-auto">
-
-                            @{
-                                string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
-                            }
-                            <!-- User -->
-                            <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                                    <div class="avatar avatar-online">
-                                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                        </object>
-                                    </div>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li>
-                                        <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                                            <div class="d-flex">
-                                                <div class="flex-shrink-0 me-3">
-                                                    <div class="avatar avatar-online">
-                                                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                                        </object>
-                                                    </div>
-                                                </div>
-                                                @{var fullname = "";
-                                                    if (Session["Name"] == null)
-                                                    {
-                                                        fullname = Request.Cookies["Name"].Value;
-                                                    }
-                                                    else
-                                                    {
-                                                        fullname = Session["Name"].ToString();
-                                                    }
-                                                }
-                                                <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">@fullname</span>
-                                                    <small class="text-muted">Yetki: @ViewBag.RoleName</small>
+                        @{
+                            string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
+                        }
+                        <!-- User -->
+                        <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                            <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                                <div class="avatar avatar-online">
+                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
+                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto ">
+                                    </object>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li>
+                                    <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0 me-3">
+                                                <div class="avatar avatar-online">
+                                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
+                                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto ">
+                                                    </object>
                                                 </div>
                                             </div>
-                                        </a>
-                                    </li>
+                                            @{var fullname = "";
+                                                if (Session["Name"] == null)
+                                                {
+                                                    fullname = Request.Cookies["Name"].Value;
+                                                }
+                                                else
+                                                {
+                                                    fullname = Session["Name"].ToString();
+                                                }
+                                            }
+                                            <div class="flex-grow-1">
+                                                <span class="fw-semibold d-block">@fullname</span>
+                                                <small class="text-muted">Yetki: @ViewBag.RoleName</small>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
 
-                                    <li>
-                                        <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                                           data-bs-target="#cikis">
-                                            <i class="bx bx-power-off me-2"></i>
-                                            <span class="align-middle">Oturumu Kapat</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <!--/ User -->
-                        </ul>
-                    </div>
+                                <li>
+                                    <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
+                                       data-bs-target="#cikis">
+                                        <i class="bx bx-power-off me-2"></i>
+                                        <span class="align-middle">Oturumu Kapat</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!--/ User -->
+                    </ul>
+
                 </nav>
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
                     <div class="modal-dialog modal-dialog-centered" role="document">
