--- a/NOVA/Views/Shared/_Layout_profil.cshtml
+++ b/NOVA/Views/Shared/_Layout_profil.cshtml
@@ -62,8 +62,13 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
-            <div class="layout-page">
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
+            <div class="layout-page" style="padding-left:0 !important">
                 <nav class="layout-navbar layout-navbar-ana container-xxl navbar navbar-expand-xl align-items-center bg-navbar-theme"
                      id="layout-navbar" style="background-color:transparent">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
