--- a/NOVA/Views/Shared/_layout_satinalma.cshtml
+++ b/NOVA/Views/Shared/_layout_satinalma.cshtml
@@ -39,7 +39,7 @@
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.css" rel="stylesheet">
-
+    <script src="~/Scripts/tippy/popper.min.js"></script>
 </head>
 <body>
 
@@ -47,9 +47,14 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
 
 
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
@@ -94,8 +99,8 @@
 
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme mb-0">
-                    <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
+                <footer class="content-footer footer bg-footer-theme mb-0" style="background-color:transparent !important">
+                    <div class="container-xxl d-flex text-nowrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
                             <script>document.write(new Date().getFullYear());</script>
