--- a/NOVA/Views/Yonetim/Stok.cshtml
+++ b/NOVA/Views/Yonetim/Stok.cshtml
@@ -317,8 +317,18 @@
     </div>
 </div>
 <script>
-    document.getElementById("yonetim").className = "menu-item open active";
-    document.getElementById("stokdeger").className = "menu-item active";
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("yonetim").className = "menu-item open active";
+        document.getElementById("stokdeger").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
+
+        document.getElementById("yonetim1").className = "nav__link active";
+        document.getElementById("stokdeger1").className = "nav__dropdown-item active";
+    }
+   
     function change(value) {
         var listfk = [];
         var list = [];
