--- a/NOVA/Views/YonetimPaneli/UygulamaIstatistik.cshtml
+++ b/NOVA/Views/YonetimPaneli/UygulamaIstatistik.cshtml
@@ -251,8 +251,18 @@
         var filt = [];
         var filt2 = [];
         $(document).ready(function () {
-            document.getElementById("yonetimpaneli").className = "menu-item open active";
-            document.getElementById("istatistik").className = "menu-item active";
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
+                document.getElementById("yonetimpaneli").className = "menu-item open active";
+                document.getElementById("istatistik").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
+
+                document.getElementById("yonetimpaneli1").className = "nav__link active";
+                document.getElementById("istatistik1").className = "nav__dropdown-item active";
+            }
+            
             var d = null;
             
             $.getJSON('http://192.168.2.13:83/api/userlogin/exec/ranks',function (data) {
