--- a/NOVA/Views/Finans/Index.cshtml
+++ b/NOVA/Views/Finans/Index.cshtml
@@ -312,9 +312,19 @@
 
     <script>
        
-            $(document).ready(function () {
+        $(document).ready(function () {
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
                 document.getElementById("finans").className = "menu-item open active";
                 document.getElementById("kur").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
+
+                document.getElementById("finans1").className = "nav__link active";
+                document.getElementById("kur1").className = "nav__dropdown-item active";
+            }
+               
                  $.getJSON("http://192.168.2.13:83/api/fiyat/kuroran",function(data){
 
                     var d=data;
