--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -6,15 +6,14 @@
 
 <!DOCTYPE html>
 
-<html lang="tr"
-      class="light-style layout-menu-fixed"
-      dir="ltr"
-      data-theme="theme-default"
-      data-assets-path="../assets/"
-      data-template="vertical-menu-template-free">
+
 <head>
     <link href="~/assets/css/border.css" rel="stylesheet" />
     <style>
+        .bg-footer-theme {
+            background-color: transparent !important;
+            color: #697a8d;
+        }
         .centercontent {
             position: absolute;
             max-width: 100%;
@@ -132,7 +131,7 @@
 </head>
 
 <body onload="script();" onclose="close()" style="overflow-x:hidden">
-    
+   
             <div class="centercontent" id="content" style="display:unset">
                 <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
             </div>
@@ -197,7 +196,7 @@
   
     <!-- / Navbar -->
     <!-- Content wrapper -->
-<div class="container-xxl flex-grow-1 container-p-y" id="online">
+<div class="container-fluid flex-grow-1 container-p-y" id="online">
     @{
         if (Request.Cookies["UserId"].Value == "10002" || Request.Cookies["UserId"].Value == "10001" /*|| Request.Cookies["UserId"].Value == "10002" || Request.Cookies["UserId"].Value == "10003" || Request.Cookies["UserId"].Value == "10005" || Request.Cookies["UserId"].Value == "10004" || Request.Cookies["UserId"].Value == "10021" || Request.Cookies["UserId"].Value == "10020"*/)
         {
@@ -411,7 +410,7 @@
                             <div class="col-sm-5 text-center text-sm-left">
 
                                 <div class="card-body pb-0 px-0 px-md-4">
-                                    <img src="/assets/img/illustrations/man-with-laptop-light.png" height="140" alt="View Badge User" data-app-dark-img="illustrations/man-with-laptop-dark.png" data-app-light-img="illustrations/man-with-laptop-light.png">
+                                    <img src="/assets/img/illustrations/man-with-laptop-light.png" height="140" alt="View Badge User" data-app-dark-img="illustrations/man-with-laptop-dark.png" data-app-light-img="illustrations/man-with-laptop-light.png" style="height:100px !important">
                                 </div>
                             </div>
                         </div>
@@ -523,44 +522,44 @@
 
 
 
-                var $tickerWrapper = $(".tickerwrapper");
-                var $list = $tickerWrapper.find("ul.list");
-                var $clonedList = $list.clone();
-                var listWidth = 10;
+    var $tickerWrapper = $(".tickerwrapper");
+    var $list = $tickerWrapper.find("ul.list");
+    var $clonedList = $list.clone();
+    var listWidth = 10;
 
-                $list.find("li").each(function (i) {
-                    listWidth += $(this, i).outerWidth(true);
-                });
+    $list.find("li").each(function (i) {
+        listWidth += $(this, i).outerWidth(true);
+    });
 
-                var endPos = $tickerWrapper.width() - listWidth;
+    var endPos = $tickerWrapper.width() - listWidth;
 
-                $list.add($clonedList).css({
-                    "width": listWidth + "px"
-                });
+    $list.add($clonedList).css({
+        "width": listWidth + "px"
+    });
 
-                $clonedList.addClass("cloned").appendTo($tickerWrapper);
+    $clonedList.addClass("cloned").appendTo($tickerWrapper);
 
-                //TimelineMax
-                var infinite = new TimelineMax({ repeat: -1, paused: true });
-                var time = 40;
+    //TimelineMax
+    var infinite = new TimelineMax({ repeat: -1, paused: true });
+    var time = 40;
 
-                infinite
-                    .fromTo($list, time, { rotation: 0.01, x: 0 }, { force3D: true, x: -listWidth, ease: Linear.easeNone }, 0)
-                    .fromTo($clonedList, time, { rotation: 0.01, x: listWidth }, { force3D: true, x: 0, ease: Linear.easeNone }, 0)
-                    .set($list, { force3D: true, rotation: 0.01, x: listWidth })
-                    .to($clonedList, time, { force3D: true, rotation: 0.01, x: -listWidth, ease: Linear.easeNone }, time)
-                    .to($list, time, { force3D: true, rotation: 0.01, x: 0, ease: Linear.easeNone }, time)
-                    .progress(1).progress(0)
-                    .play();
+    infinite
+        .fromTo($list, time, { rotation: 0.01, x: 0 }, { force3D: true, x: -listWidth, ease: Linear.easeNone }, 0)
+        .fromTo($clonedList, time, { rotation: 0.01, x: listWidth }, { force3D: true, x: 0, ease: Linear.easeNone }, 0)
+        .set($list, { force3D: true, rotation: 0.01, x: listWidth })
+        .to($clonedList, time, { force3D: true, rotation: 0.01, x: -listWidth, ease: Linear.easeNone }, time)
+        .to($list, time, { force3D: true, rotation: 0.01, x: 0, ease: Linear.easeNone }, time)
+        .progress(1).progress(0)
+        .play();
 
-                //Pause/Play
-                $tickerWrapper.on("mouseenter", function () {
-                    infinite.pause();
-                }).on("mouseleave", function () {
-                    infinite.play();
-                });
+    //Pause/Play
+    $tickerWrapper.on("mouseenter", function () {
+        infinite.pause();
+    }).on("mouseleave", function () {
+        infinite.play();
+    });
 
-            document.getElementById("anasayfa").className = "menu-item active";
+
     $(function () {
         $('.marquee').mouseover(function () {
             $(this).attr('scrollamount', 0);
@@ -568,7 +567,16 @@
             $(this).attr('scrollamount', 5);
         });
     });
-        function script() {
+    function script() {
+            
+        if ($(window).width() < 600) {
+            $("#divPartial2").show();
+            document.getElementById("anasayfa").className = "menu-item active";
+        }
+        else {
+            $("#divPartial").show();
+            document.getElementById("anasayfa1").className = "nav__link active";
+        }
             document.body.style.cursor = "default";
             document.getElementById("content").style.display = "none";
             var online = null;
@@ -789,4 +797,4 @@
 </script>
 
 </body>
-</html>
+
