--- a/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
+++ b/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
@@ -473,9 +473,18 @@
         allOptions.appendTo("#cari");
     }
     
+    if ($(window).width() < 600) {
+        $("#divPartial2").show();
+        document.getElementById("satinalma").className = "menu-item open active";
+        document.getElementById("satinalmadetsip").className = "menu-item active";
+    }
+    else {
+        $("#divPartial").show();
+
+        document.getElementById("satinalma1").className = "nav__link active";
+        document.getElementById("satinalmadetsip1").className = "nav__dropdown-item active";
+    }
    
-    document.getElementById("satinalma").className = "menu-item open active";
-    document.getElementById("satinalmadetsip").className = "menu-item active";
     var type = 'fa'
 
     function loadingTemplate(message) {
