--- a/NOVA/Views/Satis/FiyatListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatListesi.cshtml
@@ -283,8 +283,18 @@
 
                 }
             })
-            document.getElementById("satis").className = "menu-item open active";
-            document.getElementById("fiyatlistesi").className = "menu-item active";
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
+                document.getElementById("satis").className = "menu-item open active";
+                document.getElementById("fiyatlistesi").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
+
+                document.getElementById("satis1").className = "nav__link active";
+                document.getElementById("fiyatlistesi1").className = "nav__dropdown-item active";
+            }
+            
             document.getElementsByClassName("search-input")[0].onkeyup = function () {
                 document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.toUpperCase();
                 document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.replace("İ", "I").replace("Ö", "O").replace("Ü", "U").replace("Ş", "S").replace("Ç", "C").replace("Ğ", "G");
