--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -153,8 +153,18 @@
 
                     </div>
                     <script>
-                        document.getElementById("satis").className = "menu-item open active";
-                        document.getElementById("ziyaretplanlari").className = "menu-item active";
+                        if ($(window).width() < 600) {
+                            $("#divPartial2").show();
+                            document.getElementById("satis").className = "menu-item open active";
+                            document.getElementById("ziyaretplanlari").className = "menu-item active";
+                        }
+                        else {
+                            $("#divPartial").show();
+
+                            document.getElementById("satis1").className = "nav__link active";
+                            document.getElementById("ziyaretplanlari1").className = "nav__dropdown-item active";
+                        }
+                        
                         function musteritakip() {
                             $('#basicModal').modal({ backdrop: 'static', keyboard: false })
                             $('#basicModal').modal('show');
