--- a/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
+++ b/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
@@ -72,9 +72,14 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
 
 
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
