--- a/NOVA/Views/Shared/_Layout_musteri_raporu.cshtml
+++ b/NOVA/Views/Shared/_Layout_musteri_raporu.cshtml
@@ -41,10 +41,14 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            @Html.Partial("_Layout_menu")
-
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
                 <div class="container">
                     <div class="row">
                         <div class="col">
