--- a/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
+++ b/NOVA/Views/Shared/_Layout_ziyaretci.cshtml
@@ -52,9 +52,14 @@
         <div class="layout-container">
             <!-- Menu -->
 
-            @Html.Partial("_Layout_menu")
+            <div id="divPartial" style="display:none">
+                @Html.Partial("_Layout_menu")
+            </div>
+            <div id="divPartial2" style="display:none">
+                @Html.Partial("_Layout_menu2")
+            </div>
 
-            <div class="layout-page">
+            <div class="layout-page" style="padding-left:0 !important">
                 <nav class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme sticky-top position-sticky "
                      id="layout-navbar" style="max-height:50px">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
