--- a/NOVA/Views/YonetimPaneli/Kullanici.cshtml
+++ b/NOVA/Views/YonetimPaneli/Kullanici.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_Layout_yonetim.cshtml";
 }
 
-@model Tuple<NOVA.Models.User, NOVA.Models.Mail>
+@model Tuple<NOVA.Models.User, NOVA.Models.Mail,NOVA.Models.Modules>
 
 <link href="https://unpkg.com/bootstrap-table@1.21.1/dist/bootstrap-table.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -117,6 +117,51 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="modalModul" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalCenterTitle">Yeni Modül Ekleme Formu</h5>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                @{
+
+                    using (Html.BeginForm("AddModul", "YonetimPaneli", FormMethod.Post, new { @id = "myFormModulAdd" }))
+                    {
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <label>MODUL ID:</label>
+                                        @Html.TextBoxFor(Model => Model.Item3.MODULE_ID, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>MODULE NAME:</label>
+                                        @Html.TextBoxFor(Model => Model.Item3.MODULE_NAME, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>PROGRAM ID:</label>
+                                        @Html.TextBoxFor(Model => Model.Item3.PROGRAM_ID, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>PROGRAM NAME:</label>
+
+                                        @Html.TextBoxFor(Model => Model.Item3.PROGRAM_NAME, new { @class = "form-control" })
+                                    </div>
+
+                                </div>
+                        <div class="modal-footer">
+                            <button type="button" class="ekle btn btn-outline-info" onclick="myEkleModulFunction()" data-bs-dismiss="modal">EKLE</button>
+                            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">KAPAT</button>
+                        </div>
+                    }
+                }
+
+
+            </div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col">
@@ -222,6 +267,10 @@
                     <button data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Yeni Kullanıcı Ekleme Formunu Açar</span>" class="btn btn-secondary bx bxs-user-plus">
                     </button>
                 </span>
+                <span data-bs-toggle="modal" data-bs-target="#modalModul">
+                    <button data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Yeni Modül Ekleme Formunu Açar</span>" class="btn btn-secondary bx bxs-spreadsheet">
+                    </button>
+                </span>
                 <select id="filter" multiple="multiple" name="filterAlgorithm">
                 </select>
                 <select id="filter2" multiple="multiple" name="filterAlgorithm2">
@@ -273,7 +322,7 @@
                     } else {
                         return '<input class="form-check-input" type="checkbox" onchange="changemod()" value="" id="modulecheck">';
                     }
-                    
+
                 }
                 function ActiveFormatter(value, index, row) {
                     if (value) {
@@ -331,9 +380,9 @@
                     });
                 }
                 function change(v) {
-                    
+
                     var row = document.getElementById("table").getElementsByTagName("tr")[v.parentNode.parentNode.rowIndex];
-                    
+
                     if (row == null) {
                         row = document.getElementById("table").getElementsByTagName("tr")[v.parentNode.parentNode.parentNode.parentNode.parentNode.rowIndex];
                         var username = row.getElementsByTagName("span")[1].innerHTML;
@@ -350,19 +399,19 @@
                         var username = row.getElementsByTagName("td")[0].innerHTML;
 
                         var pw = row.getElementsByTagName("input")[0].value;
-                       
+
                         var fn = row.getElementsByTagName("input")[1].value;
-                       
+
                         var ln = row.getElementsByTagName("input")[2].value;
-                       
+
                         var mail = row.getElementsByTagName("input")[3].value;
-                        
+
                         var active = row.getElementsByTagName("input")[4].checked;
-                        
+
                         var role = row.getElementsByTagName("select")[0].value;
-                        
+
                     }
-                    
+
 
                     var json = { USER_NAME: username, USER_PASSWORD: pw, USER_FIRSTNAME:fn , USER_LASTNAME:ln, USER_MAIL:mail ,ACTIVE:active ,USER_ROLE:role };
                     $.ajax({
@@ -439,7 +488,7 @@
 
                 }
                  function changemod() {
-                     
+
 
                      var row = document.getElementById("table").getElementsByTagName("tr")[event.currentTarget.parentNode.parentNode.rowIndex];
                          var inckey = row.getElementsByTagName("td")[0].innerHTML;
@@ -469,7 +518,7 @@
 
                      }
 
-                
+
 
 
             </script>
@@ -490,9 +539,18 @@
         }
         var last = null;
         $(document).ready(function () {
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
+                document.getElementById("yonetimpaneli").className = "menu-item open active";
+                document.getElementById("kullanici").className = "menu-item active";
+            }
+            else {
+                $("#divPartial").show();
 
-            document.getElementById("yonetimpaneli").className = "menu-item open active";
-            document.getElementById("kullanici").className = "menu-item active";
+                document.getElementById("yonetimpaneli1").className = "nav__link active";
+                document.getElementById("kullanici1").className = "nav__dropdown-item active";
+            }
+
             getModulesAsync().then(function (data) {
                 modules = data;
             }).then(function () {
@@ -596,7 +654,7 @@
                      })
 
             })
-               
+
             }
             else if (value == 2) {
 
@@ -1075,6 +1133,9 @@
         }
         function myEkleFunction() {
             document.getElementById("myFormAdd").submit();
+        }
+        function myEkleModulFunction() {
+            document.getElementById("myFormModulAdd").submit();
         }
         function aktiviteFormatter(value, index, row) {
 
