--- a/NOVA/Views/Profil/Index.cshtml
+++ b/NOVA/Views/Profil/Index.cshtml
@@ -21,14 +21,14 @@
                     <h5 class="card-header">Profil Bilgileri</h5>
                     <!-- Account -->
                     <div class="card-body">
-                        
+
                         @using (Html.BeginForm("UploadFile", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                        { 
+                        {
                             <div class="d-flex align-items-start align-items-sm-center gap-4">
-                                @{  string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString(); }
+                                @{ string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString(); }
 
                                 <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah">
-                                
+
                             </div>
                         }
 
@@ -97,7 +97,15 @@
             </div>
         </div>
     </div>
+    <script src="~/Scripts/jquery-3.6.1.min.js"></script>
     <script>
+
+            if ($(window).width() < 600) {
+                $("#divPartial2").show();
+            }
+            else {
+                $("#divPartial").show();
+            }
         function readURL(input) {
             document.getElementById("resimKaydet").removeAttribute("disabled")
             if (input.files && input.files[0]) {
@@ -123,6 +131,6 @@
             )
         }
     </script>
-    
+
 </body>
 </html>
