GetYetki methodunda değişiklik yapıldı

--- a/NOVA/Views/Sifre/Index.cshtml
+++ b/NOVA/Views/Sifre/Index.cshtml
@@ -84,7 +84,7 @@
         </div>
         <div class="row" style="margin-top:10px">
 
-            <a onclick="kaydet()" class="square_btn" style="margin-left:40%">KAYDET</a>
+            <a onclick="kaydet()" class="square_btn" style="margin-left:40%;cursor:pointer">KAYDET</a>
         </div>
     </form>
 </div>
