--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -400,7 +400,7 @@
                             </div>
                         </div>
 
-                        <div class="nav__dropdown"  style="display: @ViewBag.DisplaySatis">
+                        <div class="nav__dropdown"  style="display: @ViewBag.DisplaySevkiyat">
                             <a onclick="openalt('sevkiyatopen')" id="sevkiyat1" class="nav__link">
                                 <i class='bx bxs-truck nav__icon'></i>
                                 <span class="nav__name">Sevkiyat</span>
