Mal Kabul Formu Oluşturuldu. Role Helper Düzenlendi. AuthHelper Oluşturuldu.

--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -409,8 +409,9 @@
 
                             <div id="sevkiyatopen" class="nav__dropdown-collapse">
                                 <div class="nav__dropdown-content">
-                                    <a href="@Url.Action("SiparisRaporu", "Sevkiyat")" id="mussiparisrap1" style="cursor:pointer;display: @ViewBag.DisplayStok" class="nav__dropdown-item">• Müşteri Siparişi Raporu</a>
+                                    <a href="@Url.Action("SiparisRaporu", "Sevkiyat")" id="mussiparisrap1" style="cursor:pointer;display: @ViewBag.DisplaySiparisRaporu" class="nav__dropdown-item">• Müşteri Siparişi Raporu</a>
                                     <a href="@Url.Action("SaticiSiparisRaporu", "Sevkiyat")" id="saticisiprap1" style="cursor: pointer; display: @ViewBag.DisplaySaticiSiparisRaporu" class="nav__dropdown-item">• Satıcı Siparişi Raporu</a>
+                                    <a href="@Url.Action("MalKabulFormu", "Sevkiyat")" id="malkabulform" style="cursor: pointer; display: @ViewBag.DisplayMalKabulForm" class="nav__dropdown-item">• Mal Kabul Formu</a>
                                 </div>
                             </div>
                         </div>
