--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -87,6 +87,11 @@
                         <div data-i18n="Without menu">Satıcı Siparişi Raporu</div>
                     </a>
                 </li>
+                <li class="menu-item" id="malkabulform" style="display: @ViewBag.DisplayMalKabulForm">
+                    <a href="@Url.Action("MalKabulFormu", "Sevkiyat")" class="menu-link">
+                        <div data-i18n="Without menu">Mal Kabul Formu</div>
+                    </a>
+                </li>
             </ul>
 
         </li>
@@ -124,7 +129,6 @@
                     </a>
                 </li>
             </ul>
-
         </li>
         <li class="menu-item" id="finans" style="display: @ViewBag.DisplayFinans">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
