--- a/NOVA/Views/Shared/_Layout_personel.cshtml
+++ b/NOVA/Views/Shared/_Layout_personel.cshtml
@@ -67,7 +67,7 @@
                     <ul class="navbar-nav flex-row align-items-center ms-auto">
 
                         @{
-                            string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
+                            string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
                         }
                         <!-- User -->
                         <li class="nav-item navbar-dropdown dropdown-user dropdown">
