--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -6000,8 +6000,9 @@
                 <thead>
                     <tr>
                         <th data-align="center" data-field="USER_ID" data-visible="false" data-sortable="true">PERSONEL KİMLİK NO</th>
-                        <th data-align="center" data-field="ISIM" data-sortable="true">ISIM</th>
-                        <th data-align="center" data-field="SOYISIM" data-wrap="false" data-sortable="true">SOYISIM</th>
+                        <th data-align="center" data-field="ISIM" data-sortable="true" data-formatter="isimformatter">ISIM SOYISIM</th>
+                        <th data-align="center" data-field="ISIM" data-sortable="true" data-visible="false">ISIM</th>
+                        <th data-align="center" data-field="SOYISIM" data-sortable="true" data-visible="false">SOYISIM</th>
                         <th data-align="center" data-field="SUBE" data-wrap="false" data-sortable="true">ŞUBE</th>
                         <th data-align="center" data-field="CINSIYET" data-sortable="true">CİNSİYET</th>
                         <th data-align="center" data-field="TCKN" data-sortable="true">TCKN</th>
@@ -6165,6 +6166,9 @@
                 return newdate;
             }
             return value;
+        }
+        function isimformatter(value, row, index) {
+            return value + " " + row.SOYISIM;
         }
         function readURL(input) {
             document.getElementById("resimKaydet").removeAttribute("disabled")
