--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -60,8 +60,18 @@
             </div>
 
             <div class="layout-page" style="padding-left:0 !important">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
+                        <div class="col d-none" style="font-size:14px">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Dilme - Trapez</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" checked>
+                                <label class="form-check-label" for="inlineRadio2">Diğer</label>
+                            </div>
+                        </div>
                         <div class="col">
                             <a class="nav-link dropdown-toggle hide-arrow nav-align-right" href="javascript:void(0);" data-bs-toggle="dropdown">
                                 <div class="avatar avatar-online">
