--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -34,6 +34,7 @@
     <style>
 
 
+
         .myInput {
             box-sizing: border-box;
             background-image: url('https://www.w3schools.com/howto/searchicon.png');
@@ -126,14 +127,17 @@
         #pivotoutput .pvtGrandTotal {
             display: none;
         }
+
         @@media screen and (max-width: 800px) {
-            #scanner{
-                margin-top:0 !important;
+            #scanner {
+                margin-top: 0 !important;
             }
+
             #qr-reader {
-                width:100% !important;
+                width: 100% !important;
             }
         }
+
         .centercontent {
             position: absolute;
             max-width: 100%;
@@ -161,6 +165,7 @@
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         var sag = 0;
@@ -182,12 +187,10 @@
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
     <div class="container-fluid" style="min-height:88%">
-
+        <button class="btn btn-outline-danger d-none" onclick="location.href='@Url.Action("UretimSonuKaydi2", "IsEmri")'">YAPIŞTIR</button>
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" onclick="change(1)" autocomplete="off">
-            <label class="btn btn-outline-primary" for="btnradio1">Üretime Al</label>
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" onclick="change(0)" checked="" autocomplete="off">
-            <label class="btn btn-outline-primary" for="btnradio2">Üretim Kaydı</label>
+            <button type="button" id="uretimeal" class="btn btn-outline-primary" onclick="change(1)">Üretime Al</button>
+            <button type="button" id="uretimkaydi" class="btn btn-outline-primary" onclick="change(0)">Üretim Kaydı</button>
         </div>
         <div class="row" style="min-height:100%;overflow-y:auto;">
             <div class="col">
@@ -235,8 +238,17 @@
     </div>
    
     <script>
+        var constant = 0;
         $(document).ready(function () {
-
+            $("#uretimkaydi").focus();
+            $('body').click(function () {
+                if (constant == 0) {
+                    $("#uretimkaydi").focus();
+                } else if(constant==1){
+                    $("#uretimeal").focus();
+                }
+               
+            });
             $.getJSON("http://192.168.2.13:83/api/makine/makineler", function (data) {
 
                 for (let i = 0; i < data.length; i++) {
@@ -273,16 +285,20 @@
         );
         function change(value) {
             if (value == 0) {
+                constant = 0;
                 $("#label").html("Çıktı")
                 $("#tablo").show();
                 $("#scanner").hide();
                 $("#makineler").show();
+                
             } else {
+                constant = 1;
                 $("#label").html("Girdi")
                 $("#tablo").hide();
                 $("#makineler").hide();
-                $(".mak").removeClass('btn-outline-secondary').addClass('btn-outline-primary');
+               /* $(".mak").removeClass('btn-outline-secondary').addClass('btn-outline-primary');*/
                 $("#scanner").show();
+                
             docReady(function () {
             var resultContainer = document.getElementById('qr-reader-results');
             var lastResult, countResults = 0;
@@ -304,7 +320,7 @@
                                 cancelButtonText: "Hayır"
                             }).then((result) => {
                                 if (result.isConfirmed) {
-                                    u="http://192.168.2.13:83/api/ie/hat/" + data[0].HATKODU + "/" + decodedText + "/" + userid;
+                                    u = "http://192.168.2.13:83/api/ie/hat/" + data[0].HATKODU + "/" + decodedText + "/" + userid;
                                     $.getJSON(u, function () {
 
                                     }).done(function () {
@@ -315,7 +331,7 @@
                                         )
                                     })
 
-                                }
+                                } 
                             })
 
                         } else {
@@ -344,32 +360,35 @@
         function c(value) {
             $("#tablo").show();
             $("#progress").show();
+            $("#uretimkaydi").focus();
             sabit = value.value;
             btnid = value.id;
             var url1 = "http://192.168.2.13:83/api/ie/TOP/" + value.value;
             document.getElementById("stokadlari").replaceChildren();
 
             $.getJSON(url1, function (data) {
-
+               
                 for (let i = 0; i < data.length; i++) {
                     var b = document.createElement("button");
                     b.className = "mak btn btn-outline-secondary me-4";
-                    b.innerHTML = data[i].STOK_ADI;
+                    b.innerHTML = "<b>" + data[i].STOK_ADI + "</b></br><span style='font-size:12px'> TOPLAM: " + data[i].TOPLAM_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + "&nbsp KULLANILAN: " + data[i].KULL_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1+"</span>";
                     b.setAttribute("onclick", "stokadichange(this)");
-
-                    var progress = document.createElement("div");
-                    progress.className = "progress";
-                    progress.style = "width:100%";
-                    var bar = document.createElement("div");
-                    bar.className = "progress-bar progress-bar-striped bg-info progress-bar-animated";
-                    bar.setAttribute("role", "progressbar");
-                    bar.setAttribute("style", "width: " + data[i].ORAN +"%");
-                    bar.setAttribute("aria-valuenow", data[i].ORAN);
-                    bar.setAttribute("aria-valuemin", "0");
-                    bar.setAttribute("aria-valuemax", "100");
-                    bar.innerHTML = data[i].ORAN + " %";
-                    progress.appendChild(bar);
-                    b.appendChild(progress);
+                    var p = document.createElement("p");
+                    p.className = "meter mt-1";
+                    p.style = "height:auto";
+                    var span1 = document.createElement("span");
+                    span1.style = "width:" + data[i].ORAN + "%";
+                    var span2 = document.createElement("span");
+                    span2.className = "progress";
+                    span2.id = "progress-msip";
+                    var span3 = document.createElement("span");
+                    span3.style = "margin-bottom:10px;text-align:end;color:black";
+                    span3.innerHTML = data[i].ORAN + "%";
+                    span2.appendChild(span3);
+                    span1.appendChild(span2);
+                    p.appendChild(span1);
+                    b.appendChild(p);
+                    
                     document.getElementById("stokadlari").appendChild(b);
                 }
 
@@ -397,8 +416,8 @@
         }
         function stokadichange(value) {
             Swal.fire({
-                title: value.innerHTML.split("<div")[0],
-                html: '<table id="tab1" class="table table-borderless inp"><tr><th>Miktar1</th><th>Miktar2</th></tr><tr><td><input onkeyup="keychange()" class="form-control text-center"  type="number"  id="miktar1" ></td>' +
+                title: value.innerHTML.split("<p")[0],
+                html: '<table id="tab1" class="table table-borderless inp"><tr><th>Miktar1</th><th>Miktar2</th></tr><tr><td><input onfocus="inputclick(this)" onkeyup="keychange()" class="form-control text-center"  type="number"  id="miktar1" ></td>' +
                     '<td><input class="form-control text-center" onkeyup="keychange()" type="number" id="miktar2"></td></tr></table>',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
@@ -414,30 +433,34 @@
             }).then((result) => {
                 $("#progress").show();
                 if (result.isConfirmed) {
-                     var ISEMRINO = null;
+                    var ISEMRINO = null;
                     var u = "http://192.168.2.13:83/api/IE/" + sabit;
                     $.getJSON(u, function (data) {
-                        
-                         ISEMRINO = data[0].ISEMRINO;
-                
-            }).done(function () {
-            $.ajax({
-                url: '@Url.Action("UretimSonuKaydı", "IsEmri")',
-                type: 'POST',
-                data: { "isemrino": ISEMRINO, "miktar1": parseFloat(m1), "miktar2": parseFloat(m2) },
-                error: function (data) {
+
+                        ISEMRINO = data[0].ISEMRINO;
+
+                    }).done(function () {
+                        $.ajax({
+                            url: '@Url.Action("UretimSonuKaydı", "IsEmri")',
+                            type: 'POST',
+                            data: { "isemrino": ISEMRINO, "miktar1": "1500", "miktar2":"0"  },
+                            error: function (data) {
+                                $("#progress").hide();
+                                Swal.fire(
+                                    'Başarılı!',
+                                    'Kayıt başarılı',
+                                    'success'
+                                )
+                                document.getElementById(btnid).onclick();
+                            }
+                        })
+                    })
+
+
+                } else {
                     $("#progress").hide();
-                    Swal.fire(
-                        'Başarılı!',
-                        'Kayıt başarılı',
-                        'success'
-                    )
-                    document.getElementById(btnid).onclick();
-                }
-            })
-            })
-
-
+                    constant = 0;
+                    $('body').trigger('click');
                 }
             })
         }
@@ -474,7 +497,9 @@
                 document.addEventListener("DOMContentLoaded", fn);
             }
         }
-
+        function inputclick(value) {
+            constant = 2;
+        }
 
         /**/
     </script>
